update preview card

--- a/src/app/(mdx)/chinh-sach-bao-mat/page.mdx
+++ b/src/app/(mdx)/chinh-sach-bao-mat/page.mdx
@@ -2,7 +2,7 @@
 
 1. Mục đích:
 
-   Chính sách bảo mật này quy định cách thức thu thập, sử dụng và tiết lộ thông tin cá nhân của bạn khi bạn truy cập và sử dụng trang web này (ktc.likelion.edu.vn).
+   Chính sách bảo mật này quy định cách thức thu thập, sử dụng và tiết lộ thông tin cá nhân của bạn khi bạn truy cập và sử dụng trang web này (ktcstudent.likelion.edu.vn).
 
    Trang web này được điều hành bởi Công ty TNHH LIKELION VIETNAM (Sau đây gọi tắt là "Công ty", "chúng tôi" hoặc "của chúng tôi").
 
